# MIA

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  data.json
backend/mia/: Index.html  main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  GetDynamodb.tsx  index.tsx
mia/: main.py
